objects/LMS_Course__c.object
<CustomObject>
    <fields>
        <fullName>Course_Description__c</fullName>
        <label>Course Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <label>Course Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Fetch_Date__c</fullName>
        <label>Last Fetch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Course_Id__c</fullName>
        <label>New Course Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LMS Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>